--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = "mongodb+srv://Arti:Arti12345@cluster0.4emndi4.mongodb.net"
-CLERK_WEBHOOK_SECRET=""
+CLERK_WEBHOOK_SECRET="whsec_9uFmVUXSDonRERw1IIyVwKVCLyeSAnak"
