--- a/Frontend/.env
+++ b/Frontend/.env
@@ -3,3 +3,5 @@ VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW5jbHVkZWQtcm9kZW50LTMzLmNsZXJrLmFjY291bnRzL
 # For development (local)
 # VITE_CLERK_PUBLISHABLE_KEY=pk_test_XXXXXXXX
 # CLERK_SECRET_KEY=sk_test_XXXXXXXX
+
+VITE_BACKEND_URL=http://localhost:5000
