--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,14 @@
+JWT_SECRET="dev#secret"
+
+# mongodb setup
 MONGODB_URI = "mongodb+srv://Arti:Arti12345@cluster0.4emndi4.mongodb.net"
-CLERK_WEBHOOK_SECRET="whsec_9uFmVUXSDonRERw1IIyVwKVCLyeSAnak"
+
+# cloudinary setup
+CLOUDINARY_NAME = "dv1lzaezc"
+CLOUDINARY_API_KEY = "316635599479464"
+CLOUDINARY_SECRET_KEY = "R-AdKo91uWx7IQ0teWbfv45zaYU"
+
+# clerk setup
+CLERK_WEBHOOK_SECRET= "whsec_9uFmVUXSDonRERw1IIyVwKVCLyeSAnak"
+CLERK_PUBLISHABLE_KEY=pk_test_aW5jbHVkZWQtcm9kZW50LTMzLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_5Xl8E8KrBnBdArLX1mYav96UMkPwQZlNJ5WSJG6xIX
