--- a/Server/package.json
+++ b/Server/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server":"nodemon index.js",
-    "start":"node index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.45",
     "@sentry/node": "^10.22.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
